Alterações no HTML

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Seção Home com título e imagem de fundo -->
   <section id="home" class="home">
-    <h1>Invista em Fundos Imobiliários e Granta seu Futuro(FIIs)</h1>
+    <h1>Invista em Fundos Imobiliários e Garanta seu Futuro(FIIs)</h1>
     <div class="background-image"></div>
   </section>
 
