Atualizações no layout e nova imagem adicionada

--- a/index.html
+++ b/index.html
@@ -1,131 +1,219 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FIIs - Investimento Imobiliário</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Cabeçalho com logo e menu -->
-  <header>
-    <div class="logo">FIIs Investimento Imobiliário</div>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#galeria">Galeria</a></li>
-        <li><a href="#video">Vídeo</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FIIs - Investimento Imobiliário</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Cabeçalho com logo e menu -->
+    <header>
+      <div class="logo">FIIs Investimento Imobiliário</div>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#galeria">Galeria</a></li>
+          <li><a href="#video">Vídeo</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <!-- Seção Home com título e imagem de fundo -->
-  <section id="home" class="home">
-    <h1>Invista em Fundos Imobiliários e Garanta seu Futuro(FIIs)</h1>
-    <div class="background-image"></div>
-  </section>
+    <main>
+      <!-- Seção Home com título e imagem de fundo -->
+      <section id="home" class="home">
+        <h1>Invista em Fundos Imobiliários e Garanta seu Futuro(FIIs)</h1>
+        <div class="background-image"></div>
+      </section>
 
-  <!-- Seção Sobre -->
-  <section id="sobre">
-    <div class="text-highlight">
-      <h2>O que são FIIs?</h2>
-
-FIIs, ou Fundos de Investimento Imobiliário, são veículos de investimento que permitem que várias pessoas invistam em conjunto no mercado imobiliário sem precisar comprar imóveis diretamente. Ao comprar cotas de um FII, o investidor se torna proprietário de uma fração de empreendimentos imobiliários, como shopping centers, edifícios comerciais, hospitais, galpões logísticos, entre outros.
-
-Esses fundos podem gerar renda passiva aos investidores, geralmente na forma de aluguéis pagos pelos imóveis que fazem parte do portfólio do FII. Além disso, existem FIIs que investem em títulos do setor imobiliário, como Certificados de Recebíveis Imobiliários (CRI), que oferecem rendimentos por meio de juros.
-
-Os FIIs são uma forma acessível de entrar no mercado imobiliário, oferecendo diversificação, liquidez e isenção de imposto de renda sobre os dividendos, uma vez que o fundo é negociado na Bolsa de Valores, permitindo que os investidores comprem e vendam cotas de maneira simples.
-
-Essa modalidade é ideal para quem busca renda recorrente e diversificação, sem a necessidade de lidar com a compra e gestão direta de imóveis.
-    </div>
-  </section>
-
-  
-
-  <!-- Galeria de Imagens -->
-  <section id="galeria">
-    <h2>Tipos de FIIS</h2>
-    <div class="gallery">
-      <div class="gallery-item">
-        <img src="img/fiis-de-tijolo.jpg" alt="Imagem 1">
-        <p> FIIs de Tijolo: Os FIIs de tijolo investem diretamente em imóveis físicos, como shoppings, galpões logísticos, lajes corporativas e outros empreendimentos imobiliários. Os investidores recebem rendimentos do aluguel desses imóveis, que são repassados aos cotistas periodicamente.</p>
-      </div>
-      <div class="gallery-item">
-        <img src="img/fiis-de-papel.webp" alt="Imagem 2">
-        <p>FIIs de Papel: Os FIIs de papel investem em títulos do mercado imobiliário, como Certificados de Recebíveis Imobiliários (CRI) e Letras de Crédito Imobiliário (LCI). Esses fundos não possuem imóveis, mas sim papéis que geram rendimentos com base em contratos de dívida vinculados ao setor imobiliário.</p>
-      </div>
-      <div class="gallery-item">
-        <img src="img/fiis-hibridos.jpg" alt="Imagem 3">
-        <p>FIIs Híbridos: Os FIIs híbridos combinam tanto imóveis físicos (tijolo) quanto papéis do mercado imobiliário. Isso permite uma maior diversificação dos investimentos, mesclando rendimentos de aluguéis com os retornos de títulos imobiliários.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="info-fiis">
-    <h2>Como Investir e Viver de Dividendos</h2>
-    <div class="info-container">
-        <div class="image-wrapper">
-            <img src="img/como investir.jpg" alt="Imagem sobre investimentos">
+      <!-- Seção Sobre -->
+      <section id="sobre">
+        <div class="text-highlight">
+          <h2>O que são FIIs?</h2>
+          <p>
+            FIIs, ou Fundos de Investimento Imobiliário, são veículos de
+            investimento que permitem que várias pessoas invistam em conjunto no
+            mercado imobiliário sem precisar comprar imóveis diretamente. Ao
+            comprar cotas de um FII, o investidor se torna proprietário de uma
+            fração de empreendimentos imobiliários, como shopping centers,
+            edifícios comerciais, hospitais, galpões logísticos, entre outros.
+            Esses fundos podem gerar renda passiva aos investidores, geralmente
+            na forma de aluguéis pagos pelos imóveis que fazem parte do
+            portfólio do FII. Além disso, existem FIIs que investem em títulos
+            do setor imobiliário, como Certificados de Recebíveis Imobiliários
+            (CRI), que oferecem rendimentos por meio de juros. Os FIIs são uma
+            forma acessível de entrar no mercado imobiliário, oferecendo
+            diversificação, liquidez e isenção de imposto de renda sobre os
+            dividendos, uma vez que o fundo é negociado na Bolsa de Valores,
+            permitindo que os investidores comprem e vendam cotas de maneira
+            simples. Essa modalidade é ideal para quem busca renda recorrente e
+            diversificação, sem a necessidade de lidar com a compra e gestão
+            direta de imóveis.
+          </p>
         </div>
-        <div class="text-wrapper">
-            <p>Investir e viver de dividendos é o sonho de muitos investidores que buscam independência financeira e renda passiva. Os dividendos são parte dos lucros que as empresas distribuem aos seus acionistas como forma de recompensa por sua participação. Para começar a viver de dividendos, é necessário seguir alguns passos e adotar uma estratégia de longo prazo.</p>
+      </section>
 
-            <p>Escolha Empresas ou Fundos Que Pagam Dividendos Consistentemente: O primeiro passo é investir em empresas ou fundos que possuem um histórico sólido de pagamento de dividendos. Empresas consolidadas em setores como energia, bancos, e telecomunicações, ou Fundos de Investimento Imobiliário (FIIs), são exemplos de ativos que costumam distribuir dividendos de forma recorrente.</p>
-
-            <p>Reinvista os Dividendos Inicialmente: No começo, é fundamental reinvestir os dividendos recebidos. Isso permite o chamado "efeito bola de neve", em que os ganhos aumentam progressivamente, já que você passa a receber dividendos sobre um montante maior a cada reinvestimento.</p>
-
-            <p>Diversifique Sua Carteira: Diversificar seus investimentos entre diferentes setores e classes de ativos, como ações de dividendos e FIIs, reduz os riscos e garante que, se uma fonte de dividendos falhar, outras podem continuar gerando renda.</p>
-
-            <p>Estabeleça Uma Meta de Renda: Para viver de dividendos, você precisa ter uma meta clara de quanto deseja receber mensalmente. A partir disso, você pode calcular quanto deve investir para atingir essa renda, considerando a média de dividend yield (percentual de dividendos pagos em relação ao valor das ações ou cotas).</p>
-
-            <p>Tenha Paciência e Consistência: Viver de dividendos não acontece do dia para a noite. É uma estratégia que demanda paciência, disciplina e visão de longo prazo. À medida que você aumenta seu patrimônio e reinveste os dividendos, sua renda passiva crescerá continuamente até atingir o ponto em que você poderá viver dela.</p>
-
-            <p>Investir com foco em dividendos é uma maneira inteligente de construir uma fonte de renda recorrente e segura ao longo do tempo. Com uma boa estratégia, é possível alcançar a independência financeira e viver de seus investimentos.</p>
+      <!-- Galeria de Imagens -->
+      <section id="galeria">
+        <h2>Tipos de FIIS</h2>
+        <div class="gallery">
+          <div class="gallery-item">
+            <img src="img/fiis-de-tijolo.jpg" alt="Imagem 1" />
+            <p>
+              FIIs de Tijolo: Os FIIs de tijolo investem diretamente em imóveis
+              físicos, como shoppings, galpões logísticos, lajes corporativas e
+              outros empreendimentos imobiliários. Os investidores recebem
+              rendimentos do aluguel desses imóveis, que são repassados aos
+              cotistas periodicamente.
+            </p>
+          </div>
+          <div class="gallery-item">
+            <img src="img/00-img-meio.jpg" alt="Imagem 2" />
+            <p>
+              FIIs de Papel: Os FIIs de papel investem em títulos do mercado
+              imobiliário, como Certificados de Recebíveis Imobiliários (CRI) e
+              Letras de Crédito Imobiliário (LCI). Esses fundos não possuem
+              imóveis, mas sim papéis que geram rendimentos com base em
+              contratos de dívida vinculados ao setor imobiliário.
+            </p>
+          </div>
+          <div class="gallery-item">
+            <img src="img/fiis-hibridos.jpg" alt="Imagem 3" />
+            <p>
+              FIIs Híbridos: Os FIIs híbridos combinam tanto imóveis físicos
+              (tijolo) quanto papéis do mercado imobiliário. Isso permite uma
+              maior diversificação dos investimentos, mesclando rendimentos de
+              aluguéis com os retornos de títulos imobiliários.
+            </p>
+          </div>
         </div>
-    </div>
-</section>
+      </section>
 
+      <section id="info-fiis">
+        <h3>Como Investir e Viver de Dividendos</h3>
+        <div class="info-container">
+          <div class="image-wrapper">
+            <img src="img/como investir.jpg" alt="Imagem sobre investimentos" />
+          </div>
+          <div class="text-wrapper">
+            <p>
+              Investir e viver de dividendos é o sonho de muitos investidores
+              que buscam independência financeira e renda passiva. Os dividendos
+              são parte dos lucros que as empresas distribuem aos seus
+              acionistas como forma de recompensa por sua participação. Para
+              começar a viver de dividendos, é necessário seguir alguns passos e
+              adotar uma estratégia de longo prazo.
+            </p>
 
+            <p>
+              Escolha Empresas ou Fundos Que Pagam Dividendos Consistentemente:
+              O primeiro passo é investir em empresas ou fundos que possuem um
+              histórico sólido de pagamento de dividendos. Empresas consolidadas
+              em setores como energia, bancos, e telecomunicações, ou Fundos de
+              Investimento Imobiliário (FIIs), são exemplos de ativos que
+              costumam distribuir dividendos de forma recorrente.
+            </p>
 
+            <p>
+              Reinvista os Dividendos Inicialmente: No começo, é fundamental
+              reinvestir os dividendos recebidos. Isso permite o chamado "efeito
+              bola de neve", em que os ganhos aumentam progressivamente, já que
+              você passa a receber dividendos sobre um montante maior a cada
+              reinvestimento.
+            </p>
 
-  <!-- Vídeo -->
-  <section id="video">
-    <h2  style="text-align: center;">Aprenda mais sobre FIIs</h2>
-    <h3>Assista ao vídeo no YouTube</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8JDghLUvxG8?si=rOxII5rpdxKvn18R" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </section>
+            <p>
+              Diversifique Sua Carteira: Diversificar seus investimentos entre
+              diferentes setores e classes de ativos, como ações de dividendos e
+              FIIs, reduz os riscos e garante que, se uma fonte de dividendos
+              falhar, outras podem continuar gerando renda.
+            </p>
 
- <!-- Botão com link externo -->
-<section id="botao" style="text-align: center; margin: 40px 0;">
-    <h2>Descubra mais sobre FIIs</h2>
-    <a href="https://www.seusiteexterno.com" target="_blank" class="btn" style="margin-left: auto; margin-right: auto;">Saiba Mais</a>
-  </section>
-  
-  
+            <p>
+              Estabeleça Uma Meta de Renda: Para viver de dividendos, você
+              precisa ter uma meta clara de quanto deseja receber mensalmente. A
+              partir disso, você pode calcular quanto deve investir para atingir
+              essa renda, considerando a média de dividend yield (percentual de
+              dividendos pagos em relação ao valor das ações ou cotas).
+            </p>
 
-<!-- Localização -->
-<section id="localizacao">
-    <h2>Localização</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3458.6937802770385!2d-51.2318631!3d-29.901922900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951964e89da69a6b%3A0x98531a640564c517!2sR.%20Santiago%2C%2020%20-%20Mathias%20Velho%2C%20Canoas%20-%20RS%2C%2092330-180!5e0!3m2!1spt-BR!2sbr!4v1726787955837!5m2!1spt-BR!2sbr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </section>
-  
+            <p>
+              Tenha Paciência e Consistência: Viver de dividendos não acontece
+              do dia para a noite. É uma estratégia que demanda paciência,
+              disciplina e visão de longo prazo. À medida que você aumenta seu
+              patrimônio e reinveste os dividendos, sua renda passiva crescerá
+              continuamente até atingir o ponto em que você poderá viver dela.
+            </p>
 
-  <!-- Formulário de Contato -->
-  <section id="contato">
-    <h2>Entre em Contato</h2>
-    <form>
-      <input type="text" placeholder="Seu nome" required>
-      <input type="email" placeholder="Seu email" required>
-      <button type="submit">Enviar</button>
-    </form>
-  </section>
+            <p>
+              Investir com foco em dividendos é uma maneira inteligente de
+              construir uma fonte de renda recorrente e segura ao longo do
+              tempo. Com uma boa estratégia, é possível alcançar a independência
+              financeira e viver de seus investimentos.
+            </p>
+          </div>
+        </div>
+      </section>
 
-  <!-- Rodapé -->
-  <footer>
-    <p>Criado por Aline Gonçalves</p>
-  </footer>
-  <script src="script.js"></script>
-</body>
+      <!-- Vídeo -->
+      <section id="video">
+        <h3>Aprenda mais sobre FIIs</h3>
+        <h4>Assista ao vídeo no YouTube</h4>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/8JDghLUvxG8?si=rOxII5rpdxKvn18R"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </section>
+
+      <!-- Botão com link externo -->
+      <section id="botao" style="text-align: center; margin: 40px 0">
+        <h3>Descubra mais sobre FIIs</h3>
+        <a
+          href="https://www.seusiteexterno.com"
+          target="_blank"
+          class="btn"
+          style="margin-left: auto; margin-right: auto"
+          >Saiba Mais</a
+        >
+      </section>
+
+      <!-- Localização -->
+      <section id="localizacao">
+        <h2>Localização</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3458.6937802770385!2d-51.231863100000005!3d-29.9019229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951964e89da69a6b%3A0x98531a640564c517!2sR.%20Santiago%2C%2020%20-%20Mathias%20Velho%2C%20Canoas%20-%20RS%2C%2092330-180!5e0!3m2!1spt-BR!2sbr!4v1729301073799!5m2!1spt-BR!2sbr"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+
+      <!-- Formulário de Contato -->
+      <section id="contato">
+        <h2>Entre em Contato</h2>
+        <form>
+          <input type="text" placeholder="Seu nome" required />
+          <input type="email" placeholder="Seu email" required />
+          <button type="submit">Enviar</button>
+        </form>
+      </section>
+
+      <!-- Rodapé -->
+      <footer>
+        <p>Criado por Aline Gonçalves</p>
+      </footer>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
