Atualiza index.html, script.js e style.css; adiciona imagens da galeria

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <!-- Cabeçalho com logo e menu -->
     <header>
       <div class="logo">FIIs Investimento Imobiliário</div>
+      <div class="menu-icon" id="menu-icon">&#9776;</div>
       <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#galeria">Galeria</a></li>
-          <li><a href="#video">Vídeo</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
+          <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#sobre">Sobre</a></li>
+              <li><a href="#galeria">Galeria</a></li>
+              <li><a href="#contato">Contato</a></li>
+          </ul>
       </nav>
-    </header>
-
+  </header>
+  
     <main>
       <!-- Seção Home com título e imagem de fundo -->
       <section id="home" class="home">
@@ -60,7 +60,7 @@
         <h2>Tipos de FIIS</h2>
         <div class="gallery">
           <div class="gallery-item">
-            <img src="img/fiis-de-tijolo.jpg" alt="Imagem 1" />
+            <img src="img/img-galeria01.jpg" alt="Imagem 1" />
             <p>
               FIIs de Tijolo: Os FIIs de tijolo investem diretamente em imóveis
               físicos, como shoppings, galpões logísticos, lajes corporativas e
@@ -70,7 +70,7 @@
             </p>
           </div>
           <div class="gallery-item">
-            <img src="img/00-img-meio.jpg" alt="Imagem 2" />
+            <img src="img/img-galeria02.jpg" alt="Imagem 2" />
             <p>
               FIIs de Papel: Os FIIs de papel investem em títulos do mercado
               imobiliário, como Certificados de Recebíveis Imobiliários (CRI) e
@@ -80,7 +80,7 @@
             </p>
           </div>
           <div class="gallery-item">
-            <img src="img/fiis-hibridos.jpg" alt="Imagem 3" />
+            <img src="img/img-galeria03.jpg" alt="Imagem 3" />
             <p>
               FIIs Híbridos: Os FIIs híbridos combinam tanto imóveis físicos
               (tijolo) quanto papéis do mercado imobiliário. Isso permite uma
@@ -98,61 +98,44 @@
             <img src="img/como investir.jpg" alt="Imagem sobre investimentos" />
           </div>
           <div class="text-wrapper">
-            <p>
-              Investir e viver de dividendos é o sonho de muitos investidores
-              que buscam independência financeira e renda passiva. Os dividendos
-              são parte dos lucros que as empresas distribuem aos seus
-              acionistas como forma de recompensa por sua participação. Para
-              começar a viver de dividendos, é necessário seguir alguns passos e
-              adotar uma estratégia de longo prazo.
-            </p>
-
-            <p>
-              Escolha Empresas ou Fundos Que Pagam Dividendos Consistentemente:
-              O primeiro passo é investir em empresas ou fundos que possuem um
-              histórico sólido de pagamento de dividendos. Empresas consolidadas
-              em setores como energia, bancos, e telecomunicações, ou Fundos de
-              Investimento Imobiliário (FIIs), são exemplos de ativos que
-              costumam distribuir dividendos de forma recorrente.
-            </p>
-
-            <p>
-              Reinvista os Dividendos Inicialmente: No começo, é fundamental
-              reinvestir os dividendos recebidos. Isso permite o chamado "efeito
-              bola de neve", em que os ganhos aumentam progressivamente, já que
-              você passa a receber dividendos sobre um montante maior a cada
-              reinvestimento.
-            </p>
-
-            <p>
-              Diversifique Sua Carteira: Diversificar seus investimentos entre
-              diferentes setores e classes de ativos, como ações de dividendos e
-              FIIs, reduz os riscos e garante que, se uma fonte de dividendos
-              falhar, outras podem continuar gerando renda.
-            </p>
-
-            <p>
-              Estabeleça Uma Meta de Renda: Para viver de dividendos, você
-              precisa ter uma meta clara de quanto deseja receber mensalmente. A
-              partir disso, você pode calcular quanto deve investir para atingir
-              essa renda, considerando a média de dividend yield (percentual de
-              dividendos pagos em relação ao valor das ações ou cotas).
-            </p>
-
-            <p>
-              Tenha Paciência e Consistência: Viver de dividendos não acontece
-              do dia para a noite. É uma estratégia que demanda paciência,
-              disciplina e visão de longo prazo. À medida que você aumenta seu
-              patrimônio e reinveste os dividendos, sua renda passiva crescerá
-              continuamente até atingir o ponto em que você poderá viver dela.
-            </p>
-
-            <p>
-              Investir com foco em dividendos é uma maneira inteligente de
-              construir uma fonte de renda recorrente e segura ao longo do
-              tempo. Com uma boa estratégia, é possível alcançar a independência
-              financeira e viver de seus investimentos.
-            </p>
+              <p>
+                Investir e viver de dividendos é o sonho de muitos investidores
+                que buscam independência financeira e renda passiva. Os dividendos
+                são parte dos lucros que as empresas distribuem aos seus
+                acionistas como forma de recompensa por sua participação. Para
+                começar a viver de dividendos, é necessário seguir alguns passos e
+                adotar uma estratégia de longo prazo.
+                Escolha Empresas ou Fundos Que Pagam Dividendos Consistentemente:
+                O primeiro passo é investir em empresas ou fundos que possuem um
+                histórico sólido de pagamento de dividendos. Empresas consolidadas
+                em setores como energia, bancos, e telecomunicações, ou Fundos de
+                Investimento Imobiliário (FIIs), são exemplos de ativos que
+                costumam distribuir dividendos de forma recorrente.
+                Reinvista os Dividendos Inicialmente: No começo, é fundamental
+                reinvestir os dividendos recebidos. Isso permite o chamado "efeito
+                bola de neve", em que os ganhos aumentam progressivamente, já que
+                você passa a receber dividendos sobre um montante maior a cada
+                reinvestimento.
+                Diversifique Sua Carteira: Diversificar seus investimentos entre
+                diferentes setores e classes de ativos, como ações de dividendos e
+                FIIs, reduz os riscos e garante que, se uma fonte de dividendos
+                falhar, outras podem continuar gerando renda.
+                Estabeleça Uma Meta de Renda: Para viver de dividendos, você
+                precisa ter uma meta clara de quanto deseja receber mensalmente. A
+                partir disso, você pode calcular quanto deve investir para atingir
+                essa renda, considerando a média de dividend yield (percentual de
+                dividendos pagos em relação ao valor das ações ou cotas).
+                Tenha Paciência e Consistência: Viver de dividendos não acontece
+                do dia para a noite. É uma estratégia que demanda paciência,
+                disciplina e visão de longo prazo. À medida que você aumenta seu
+                patrimônio e reinveste os dividendos, sua renda passiva crescerá
+                continuamente até atingir o ponto em que você poderá viver dela.
+                Investir com foco em dividendos é uma maneira inteligente de
+                construir uma fonte de renda recorrente e segura ao longo do
+                tempo. Com uma boa estratégia, é possível alcançar a independência
+                financeira e viver de seus investimentos.
+              </p>
+            
           </div>
         </div>
       </section>
@@ -177,7 +160,7 @@
       <section id="botao" style="text-align: center; margin: 40px 0">
         <h3>Descubra mais sobre FIIs</h3>
         <a
-          href="https://www.seusiteexterno.com"
+          href="https://www.fundsexplorer.com.br/"
           target="_blank"
           class="btn"
           style="margin-left: auto; margin-right: auto"
